Update AppointmentService.java